--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -5,19 +5,15 @@
     background-color: transparent;
     cursor: pointer;
     padding: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(100%, -100%);
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: flex-end;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 580px) {
     .popup__close-btn {
         width: 40px;
         height: 40px;
-        transform: translate(30%, -110%);
     }
 }
