--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,19 +1,14 @@
 .popup__container {
-    width: 430px;
-    height: 330px;
-    background-color: #fff;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    position: relative;
-    padding: 34px 36px 37px;
+    min-height: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 580px) {
     .popup__container {
-        width: 282px;
-        height: 322px;
-        padding: 25px 22px;
-        letter-spacing: -0.03em;
+        margin: 0 20px;
     }
 }
