--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -2,6 +2,7 @@
     display: block;
     background-color: rgba(0, 0, 0, 1);
     border-radius: 2px;
+    border: 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
@@ -9,6 +10,7 @@
     color: #fff;
     width: 100%;
     height: 50px;
+    margin: 20px 0;
     cursor: pointer;
     transition: background-color 0.1s;
 }
@@ -17,7 +19,7 @@
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
     .popup__submit-btn {
         height: 46px;
         font-size: 14px;
