--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -1,6 +1,6 @@
 .popup__close-btn {
-    width: 48px;
-    height: 48px;
+    width: 40px;
+    height: 40px;
     border: 0;
     background-color: transparent;
     cursor: pointer;
@@ -9,11 +9,23 @@
     justify-content: center;
     align-items: center;
     align-self: flex-end;
+    margin: 0 0 5px 0;
+    background-image: url(../../../images/icons/plus.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    transform: rotate(45deg);
+    transition: opacity 0.15s;
+}
+
+.popup__close-btn:hover {
+    opacity: 0.6;
 }
 
 @media (max-width: 580px) {
     .popup__close-btn {
-        width: 40px;
-        height: 40px;
+        width: 26px;
+        height: 26px;
+        margin: 0 0 15px 0;
     }
 }
