--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,5 @@
 .popup__container {
+    width: 516px;
     min-height: 380px;
     display: flex;
     flex-direction: column;
@@ -9,6 +10,6 @@
 
 @media (max-width: 580px) {
     .popup__container {
-        margin: 0 20px;
+        margin: 0 19px;
     }
 }
