--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -6,5 +6,6 @@
     width: 100%;
     height: 27px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    margin: 0 0 27px 0;
+    margin: 0 0 26px 0;
+    padding: 0 0 3px 0;
 }
