--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -12,7 +12,7 @@
     height: 50px;
     margin: 20px 0;
     cursor: pointer;
-    transition: background-color 0.1s;
+    transition: background-color 0.15s;
 }
 
 .popup__submit-btn:hover {
@@ -24,5 +24,6 @@
         height: 46px;
         font-size: 14px;
         line-height: 17px;
+        margin: 20px 0 0 0;
     }
 }
