--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -2,8 +2,11 @@
     width: 24px;
     height: 24px;
     background-color: transparent;
+    background-image: url(../../../images/icons/pen.svg);
+    background-repeat: no-repeat;
+    background-position: center;
     cursor: pointer;
-    border: 1px solid rgba(255,255,255,1);
+    border: 1px solid #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,6 +14,11 @@
     right: 0;
     top: 0;
     transform: translate(180%,60%);
+    transition: opacity 0.15s;
+}
+
+.profile__edit-btn:hover {
+    opacity: 0.6;
 }
 
 @media (max-width: 750px) {
