--- a/blocks/profile/__name-edit/profile__name-edit.css
+++ b/blocks/profile/__name-edit/profile__name-edit.css
@@ -2,4 +2,11 @@
     display: flex;
     align-items: center;
     position: relative;
+    max-width: 450px;
+}
+
+@media (max-width: 850px) {
+    .profile__name-edit {
+        max-width: 350px;
+    }
 }
