fix: исправить замечания

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import "../vendor/normalize.css";
-@import "../vendor/fonts/inter.css";
+@import "../vendor/fonts.css";
 @import "../blocks/body/body.css";
 @import "../blocks/page/page.css";
 @import "../blocks/header/header.css";
@@ -25,7 +25,6 @@
 @import "../blocks/footer/__text/footer__text.css";
 @import "../blocks/popup/popup.css";
 @import "../blocks/popup/_opened/popup_opened.css";
-@import "../blocks/popup/__window/popup__window.css";
 @import "../blocks/popup/__form/popup__form.css";
 @import "../blocks/popup/__close-btn/popup__close-btn.css";
 @import "../blocks/popup/__submit-btn/popup__submit-btn.css";
