--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,9 @@
 .footer {
     padding: 69px 0 60px 0;
-    letter-spacing: 0.04em;
+}
+
+@media (max-width: 600px) {
+    .footer {
+        padding: 48px 0 36px 0;
+    }
 }
