--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,7 @@
 
 @media (max-width: 600px) {
     .header {
-        padding: 28px 0 32px 0;
+        padding: 28px 0 27px 0;
+        margin: 0 -19px 42px -19px;
     }
 }
