--- a/blocks/place/__name/place__name.css
+++ b/blocks/place/__name/place__name.css
@@ -2,9 +2,9 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    letter-spacing: -0.05em;
     margin: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    max-width: calc(100% - 24px);
 }
