--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -4,18 +4,15 @@
     border: 0;
     background-color: transparent;
     cursor: pointer;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-end;
-    margin: 0 0 5px 0;
     background-image: url(../../../images/icons/plus.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
     transform: rotate(45deg);
     transition: opacity 0.15s;
+    position: absolute;
+    top: -44px;
+    right: -44px;
 }
 
 .popup__close-btn:hover {
@@ -24,8 +21,10 @@
 
 @media (max-width: 580px) {
     .popup__close-btn {
-        width: 26px;
-        height: 26px;
+        width: 25px;
+        height: 25px;
         margin: 0 0 15px 0;
+        top: -38px;
+        right: -2px;
     }
 }
