--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,15 +1,18 @@
 .popup__container {
-    width: 516px;
-    min-height: 380px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    max-width: 430px;
+    min-height: 330px;
+    background-color: #fff;
     box-sizing: border-box;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    position: relative;
+    padding: 34px 36px 17px;
 }
 
 @media (max-width: 580px) {
     .popup__container {
+        min-height: 322px;
         margin: 0 19px;
+        padding: 25px 22px;
     }
 }
