--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,6 +7,7 @@
     border-radius: 10px;
     position: relative;
     padding: 34px 36px 17px;
+    flex-basis: 100%;
 }
 
 @media (max-width: 580px) {
