--- a/blocks/place/__info/place__info.css
+++ b/blocks/place/__info/place__info.css
@@ -2,5 +2,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 20px 31px 21px;
+    padding: 28px 20px 28px 21px;
+    height: 23px;
 }
