--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,4 +2,8 @@
     height: 361px;
     background-color: #fff;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
 }
