--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,13 @@
 .popup {
     width: 100%;
     height: 100vh;
-    background-color: rgba(0,0,0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
     left: 0;
-    display: none;
     justify-content: center;
     align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.8s;
 }
