--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -10,7 +10,7 @@
     color: #fff;
     width: 100%;
     height: 50px;
-    margin: 22px 0;
+    margin: 24px 0 0 0;
     cursor: pointer;
     transition: background-color 0.15s;
 }
