--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,5 +9,6 @@
     align-items: center;
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0s, opacity 0.8s;
+    display: flex;
+    transition: visibility 0.3s, opacity 0.3s;
 }
