--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,11 @@
 @import "../blocks/popup/__title/popup__title.css";
 @import "../blocks/popup/__container/popup__container.css";
 @import "../blocks/popup/__input/popup__input.css";
+@import "../blocks/popup/__input/_type/popup__input_type_error.css";
+@import "../blocks/popup/__input-error/popup__input-error.css";
+@import "../blocks/popup/__input-error/_active/popup__input-error_active.css";
+@import "../blocks/popup/__field/popup__field.css";
+@import "../blocks/popup/__submit-btn/_inactive/popup__submit-btn_inactive.css";
 @import "../blocks/picture/picture.css";
 @import "../blocks/picture/__image/picture__image.css";
 @import "../blocks/picture/__title/picture__title.css";
