--- a/src/blocks/place/place.css
+++ b/src/blocks/place/place.css
@@ -4,6 +4,6 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     position: relative;
 }
