--- a/src/blocks/place/__info/place__info.css
+++ b/src/blocks/place/__info/place__info.css
@@ -2,6 +2,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 28px 20px 28px 21px;
-    height: 23px;
+    padding: 0 20px 0 21px;
+    height: 80px;
 }
