--- a/src/blocks/place/__like/place__like.css
+++ b/src/blocks/place/__like/place__like.css
@@ -3,7 +3,7 @@
     border: 0;
     cursor: pointer;
     padding: 2px;
-    margin: 2px 0 0 0;
+    margin: 0 0 2px 0;
     width: 24px;
     height: 21px;
     background-image: url(../../../images/icons/like.svg);
