--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
     max-width: 430px;
-    min-height: 330px;
+    /*min-height: 330px;*/
     background-color: #fff;
     box-sizing: border-box;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
