--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,8 +2,8 @@
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
+    width: 100%;
+    height: 100%;
 }
 
 @media (max-width: 750px) {
