--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,6 +7,8 @@
 @import "../blocks/profile/profile.css";
 @import "../blocks/profile/__add-btn/profile__add-btn.css";
 @import "../blocks/profile/__avatar/profile__avatar.css";
+@import "../blocks/profile/__avatar-container/profile__avatar-container.css";
+@import "../blocks/profile/__avatar-hover/profile__avatar-hover.css";
 @import "../blocks/profile/__description/profile__description.css";
 @import "../blocks/profile/__info/profile__info.css";
 @import "../blocks/profile/__data/profile__data.css";
@@ -21,6 +23,8 @@
 @import "../blocks/place/__info/place__info.css";
 @import "../blocks/place/__like/place__like.css";
 @import "../blocks/place/__like/_active/place__like_active.css";
+@import "../blocks/place/__like-block/place__like-block.css";
+@import "../blocks/place/__like-count/place__like-count.css";
 @import "../blocks/place/__name/place__name.css";
 @import "../blocks/footer/footer.css";
 @import "../blocks/footer/__text/footer__text.css";
