--- a/main.css
+++ b/main.css
@@ -6,7 +6,9 @@
 @media (max-width:600px){.header__logo{margin:0 0 0 27px;width:104px}}
 .profile{align-items:center;display:flex;justify-content:space-between;margin:0 0 50px;position:relative}@media (max-width:750px){.profile{flex-direction:column;margin:0 0 36px}}
 .profile__add-btn{align-items:center;background-color:transparent;background-image:url(bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;cursor:pointer;display:flex;height:50px;justify-content:center;width:150px}.profile__add-btn:hover{opacity:.6}@media (max-width:750px){.profile__add-btn{background-size:16px;max-width:300px;width:100%}}
-.profile__avatar{border-radius:50%;height:120px;width:120px}@media (max-width:750px){.profile__avatar{margin:0 0 26px}}
+.profile__avatar{border-radius:50%;height:100%;width:100%}@media (max-width:750px){.profile__avatar{margin:0 0 26px}}
+.profile__avatar-container{height:120px;position:relative;width:120px}
+.profile__avatar-hover{background-color:transparent;height:100%;left:0;position:absolute;top:0;width:100%}.profile__avatar-hover:hover{background-color:rgba(0,0,0,.8);background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;background-size:26px;cursor:pointer;transition:background-color .3s}
 .profile__description{color:#fff;font-size:18px;font-weight:400;line-height:22px;margin:0;max-width:450px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:850px){.profile__description{max-width:350px}}@media (max-width:750px){.profile__description{font-size:14px;line-height:17px;margin:0 0 32px;text-align:center}}
 .profile__data{align-items:center;display:flex}@media (max-width:750px){.profile__data{flex-direction:column}}
 .profile__edit-btn{align-items:center;background-color:transparent;background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;cursor:pointer;display:flex;height:24px;justify-content:center;position:absolute;right:0;top:0;transform:translate(180%,60%);transition:opacity .15s;width:24px}.profile__edit-btn:hover{opacity:.6}@media (max-width:750px){.profile__edit-btn{height:18px;transform:translate(150%,50%);width:18px}}
@@ -14,12 +16,14 @@
 .profile__name{color:#fff;font-size:42px;font-style:normal;font-weight:500;line-height:48px;margin:0 0 10px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:750px){.profile__name{font-size:27px;line-height:33px;margin:0 0 8px;text-align:center}}
 .profile__name-edit{align-items:center;display:flex;max-width:450px;position:relative}@media (max-width:850px){.profile__name-edit{max-width:350px}}
 .places{-moz-column-gap:16px;column-gap:16px;display:grid;grid-template-columns:repeat(auto-fill,minmax(282px,1fr));row-gap:20px}
-.place{background-color:#fff;border-radius:10px;display:flex;flex-direction:column;height:361px;justify-content:space-between;position:relative}
+.place{background-color:#fff;border-radius:10px;display:flex;flex-direction:column;height:361px;position:relative}
 .place__delete{background-color:transparent;background-image:url(ce3b64935accf9b8212e.svg);border:0;cursor:pointer;height:19px;position:absolute;right:20px;top:20px;transition:opacity .15s;width:18px}.place__delete:hover{opacity:.6}
 .place__image{border-top-left-radius:10px;border-top-right-radius:10px;height:282px;-o-object-fit:cover;object-fit:cover;width:100%}
-.place__info{align-items:center;display:flex;height:23px;justify-content:space-between;padding:28px 20px 28px 21px}
-.place__like{background-color:transparent;background-image:url(1ad06e85f169668a1f36.svg);background-position:50%;background-repeat:no-repeat;border:0;cursor:pointer;height:21px;margin:2px 0 0;padding:2px;transition:opacity .15s;width:24px}.place__like:hover{opacity:.5}
+.place__info{align-items:center;display:flex;height:80px;justify-content:space-between;padding:0 20px 0 21px}
+.place__like{background-color:transparent;background-image:url(1ad06e85f169668a1f36.svg);background-position:50%;background-repeat:no-repeat;border:0;cursor:pointer;height:21px;margin:0 0 2px;padding:2px;transition:opacity .15s;width:24px}.place__like:hover{opacity:.5}
 .place__like_active{background-image:url(35948469632d0421d697.svg)}
+.place__like-block{align-items:center;display:flex;flex-direction:column}
+.place__like-count{font-size:13px;line-height:16px;margin:0 0 0 1px}
 .place__name{font-size:24px;font-weight:900;line-height:29px;margin:0;max-width:calc(100% - 24px);overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .footer{padding:69px 0 60px}@media (max-width:600px){.footer{padding:48px 0 36px}}
 .footer__text{color:#545454;font-size:18px;font-weight:400;line-height:22px;margin:0}@media (max-width:600px){.footer__text{font-size:14px;line-height:17px}}
@@ -30,7 +34,7 @@
 .popup__close-btn{background-color:transparent;background-image:url(bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;background-size:100%;border:0;cursor:pointer;height:40px;position:absolute;right:-44px;top:-44px;transform:rotate(45deg);transition:opacity .15s;width:40px}.popup__close-btn:hover{opacity:.6}@media (max-width:580px){.popup__close-btn{height:25px;margin:0 0 15px;right:-2px;top:-38px;width:25px}}
 .popup__submit-btn{background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;display:block;font-size:18px;font-weight:400;height:50px;line-height:22px;margin:24px 0 0;text-align:center;transition:background-color .15s;width:100%}.popup__submit-btn:hover{background-color:rgba(0,0,0,.8)}@media (max-width:500px){.popup__submit-btn{font-size:14px;height:46px;line-height:17px;margin:20px 0 0}}
 .popup__title{font-size:24px;font-weight:900;line-height:29px;margin:0 0 44px}@media (max-width:500px){.popup__title{font-size:18px;line-height:22px;margin:0 0 70px}}
-.popup__container{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;display:flex;flex-basis:100%;flex-direction:column;justify-content:space-between;max-width:430px;min-height:330px;padding:34px 36px 36px;position:relative}@media (max-width:580px){.popup__container{margin:0 19px;min-height:322px;padding:25px 22px}}
+.popup__container{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;display:flex;flex-basis:100%;flex-direction:column;justify-content:space-between;max-width:430px;padding:34px 36px 36px;position:relative}@media (max-width:580px){.popup__container{margin:0 19px;min-height:322px;padding:25px 22px}}
 .popup__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);font-size:14px;font-weight:400;height:27px;line-height:17px;margin:0 0 5px;padding:0 0 3px;width:100%}
 .popup__input_type_error{border-bottom:1px solid red}
 .popup__input-error{color:red;display:block;font-size:12px;font-weight:400;line-height:15px;margin:0 0 21px}
